[package]
name = "morg"
version = "0.1.0"
edition = "2024"

[dependencies]
adb_client = "2.1.13"
anyhow = "1.0.98"
audiotags = "0.5.0"
clap = { version = "4.5.39", features = ["derive"] }
counter = "0.6.0"
directories = "6.0.0"
distance = "0.4.0"
fs_extra = "1.3.0"
indicatif = "0.18.0"
json = "0.12.4"
pathdiff = "0.2.3"
regex = "1.11.2"
reqwest = { version = "0.12.22", features = ["blocking"] }
serde = "1.0.219"
symlink = "0.1.0"
tokio = { version = "1.46.1", features = ["full"] }
toml = "0.8.23"
zeroize = { version = "1.8.1", features = ["zeroize_derive"] }
